--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>This is new contact</h1>
-<script type="text/javascript" src="assets/js/contact.bundle.js?c7134d223371349df7be"></script></body>
+    <h1>Hello</h1>
+</body>
 </html>
