--- a/src/contact.html
+++ b/src/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>This is new contact</h1>
+    <h1>Contacts Page</h1>
 </body>
 </html>
