fixed parallax effect and nav is working

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>test 1</h1>
+    <header>
+        <h1 class="website-title">Bom Ao Quadrado</h1>
+        <span class="nav-toggle">Open</span>
+        <nav class="main-nav" role="navigation">
+            <div class="logo-container-outer">
+                <span class="nav-toggle">Close</span>
+                <img src="https://placeimg.com/150/150/people" alt="">
+            </div>
+            <div>
+                <a href="">Home</a>
+            </div>
+            <div>
+                <a href="">Conceito</a>
+            </div>
+            <div>
+                <a href="">Produtos</a>
+            </div>
+            <div>
+                <a href="">#bomaoquadrado</a>
+            </div>
+            <div>
+                <a href="">História</a>
+            </div>
+            <div>
+                <a href="">Contactos</a>
+            </div>
+            <div>
+                <a href="">Eventos</a>
+            </div>
+        </nav>
+    </header>
+    <main class="parallax-wrapper">
+        <section class="section parallax bg1">
+            <h1>Bom ao quadrado</hi>
+        </section>
+        <section class="section static">
+            <h1>Test text</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+            </p>
+        </section>
+        <section class="section parallax bg2">
+            <h1>Test 2</h1>
+        </section>
+        <footer class="section static footer">
+            <h1>Test text</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+            </p>
+        </footer>
+    </main>
 </body>
 </html>
