nav and header almost done

--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <header>
-        <h1 class="website-title">Bom Ao Quadrado</h1>
-        <span class="nav-toggle">Open</span>
-        <nav class="main-nav" role="navigation">
-            <div class="logo-container-outer">
-                <span class="nav-toggle">Close</span>
-                <img src="https://placeimg.com/150/150/people" alt="">
-            </div>
-            <div>
-                <a href="">Home</a>
-            </div>
-            <div>
-                <a href="">Conceito</a>
-            </div>
-            <div>
-                <a href="">Produtos</a>
-            </div>
-            <div>
-                <a href="">#bomaoquadrado</a>
-            </div>
-            <div>
-                <a href="">História</a>
-            </div>
-            <div>
-                <a href="">Contactos</a>
-            </div>
-            <div>
-                <a href="">Eventos</a>
-            </div>
-        </nav>
-    </header>
     <main class="parallax-wrapper">
+        <header class="main-header">
+            <div class="top-stripe"></div>
+            <h1 class="website-title" data-header="Bom Ao Quadrado">Bom Ao Quadrado</h1>
+            <div class="nav-toggle">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <nav class="main-nav" role="navigation">
+                <div class="logo-container-outer">
+                    <span class="nav-toggle">Close</span>
+                    <img src="https://placeimg.com/150/150/people" alt="">
+                </div>
+                <div>
+                    <a href="">Home</a>
+                </div>
+                <div>
+                    <a href="">Conceito</a>
+                </div>
+                <div>
+                    <a href="">Produtos</a>
+                </div>
+                <div>
+                    <a href="">#bomaoquadrado</a>
+                </div>
+                <div>
+                    <a href="">História</a>
+                </div>
+                <div>
+                    <a href="">Contactos</a>
+                </div>
+                <div>
+                    <a href="">Eventos</a>
+                </div>
+            </nav>
+        </header>
         <section class="section parallax bg1">
             <h1>Bom ao quadrado</hi>
         </section>
