Roadmap skeleton is sonde, changed some nav aspects

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,30 @@
 <body>
     <main class="parallax-wrapper">
         <header class="main-header">
+            <div class="roadmap">
+                <a href="">
+                    <div class="destination">
+                        <span>Lagos</span>
+                        <span>(anterior)</span>
+                    </div>
+                </a>
+                <div class="destination connection"></div>
+                <a href="">
+                    <div class="destination current">
+                        <span>Portimão</span>
+                        <span>(actual)</span>
+                    </div>
+                </a>
+                </a><div class="destination connection"></div>
+                <a href="">
+                    <div class="destination">
+                        <span>Faro</span>
+                        <span>(proximo)</span>
+                    </div>
+                </a>
+            </div>
             <div class="top-stripe"></div>
-            <h1 class="website-title" data-header="Bom Ao Quadrado">Bom Ao Quadrado</h1>
+            <h2 class="website-title">Bom Ao Quadrado</h2>
             <div class="nav-toggle">
                 <div></div>
                 <div></div>
@@ -45,7 +67,7 @@
             </nav>
         </header>
         <section class="section parallax bg1">
-            <h1>Bom ao quadrado</hi>
+            <h1>Bom ao quadrado</h1>
         </section>
         <section class="section static">
             <h1>Test text</h1>
