--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <nav class="main-nav" role="navigation">
+            <div class="nav-toggle">
+                <span class="nav-close-icon">X</span>
+            </div>
+            <div class="logo-container-outer">
+                <img src="/dist/assets/img/logo.png" class="nav-mobile-logo" alt="">
+            </div>
+            <div>
+                <a href="#home" class="btn-primary">Home</a>
+            </div>
+            <div>
+                <a href="#conceito" class="btn-primary">Conceito</a>
+            </div>
+            <div>
+                <a href="#produtos" class="btn-primary">Produtos</a>
+            </div>
+            <div>
+                <a href="#bomaoquadrado" class="btn-primary">#bomaoquadrado</a>
+            </div>
+            <div>
+                <a href="#historia" class="btn-primary">História</a>
+            </div>
+            <div>
+                <a href="#contactos" class="btn-primary">Contactos</a>
+            </div>
+            <div>
+                <a href="#eventos" class="btn-primary">Eventos</a>
+            </div>
+    </nav>
     <main class="parallax-wrapper">
         <header class="main-header">
             <div class="roadmap">
@@ -32,42 +61,16 @@
                 </a>
             </div>
             <div class="top-stripe"></div>
-            <h2 class="website-title">Bom Ao Quadrado</h2>
+            <!-- <h2 class="website-title"> -->
+                <img src="/dist/assets/img/logo.png" class="logo-landing-page" alt="">
+            <!-- </h2> -->
             <div class="nav-toggle">
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
-            <nav class="main-nav" role="navigation">
-                <div class="logo-container-outer">
-                    <span class="nav-toggle">Close</span>
-                    <img src="https://placeimg.com/150/150/people" alt="">
-                </div>
-                <div>
-                    <a href="">Home</a>
-                </div>
-                <div>
-                    <a href="">Conceito</a>
-                </div>
-                <div>
-                    <a href="">Produtos</a>
-                </div>
-                <div>
-                    <a href="">#bomaoquadrado</a>
-                </div>
-                <div>
-                    <a href="">História</a>
-                </div>
-                <div>
-                    <a href="">Contactos</a>
-                </div>
-                <div>
-                    <a href="">Eventos</a>
-                </div>
-            </nav>
         </header>
         <section class="section parallax bg1">
-            <h1>Bom ao quadrado</h1>
         </section>
         <section class="section static">
             <h1>Test text</h1>
