changes to index and package

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
                 <span class="nav-close-icon">X</span>
             </div>
             <div class="logo-container-outer">
-                <img src="/dist/assets/img/logo.png" class="nav-mobile-logo" alt="">
+                <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
             </div>
             <div>
                 <a href="#home" class="btn-primary">Home</a>
@@ -62,7 +62,7 @@
             </div>
             <div class="top-stripe"></div>
             <!-- <h2 class="website-title"> -->
-                <img src="/dist/assets/img/logo.png" class="logo-landing-page" alt="">
+                <img src="./assets/img/logo.png" class="logo-landing-page" alt="">
             <!-- </h2> -->
             <div class="nav-toggle">
                 <div></div>
