moved nav and createda  smal effect for the menu button

--- a/src/index.html
+++ b/src/index.html
@@ -7,63 +7,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <nav class="main-nav" role="navigation">
-            <div class="nav-toggle">
-                <span class="nav-close-icon">X</span>
-            </div>
-            <div class="logo-container-outer">
-                <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
-            </div>
-            <div>
-                <a href="#home" class="btn-primary">Home</a>
-            </div>
-            <div>
-                <a href="#conceito" class="btn-primary">Conceito</a>
-            </div>
-            <div>
-                <a href="#produtos" class="btn-primary">Produtos</a>
-            </div>
-            <div>
-                <a href="#bomaoquadrado" class="btn-primary">#bomaoquadrado</a>
-            </div>
-            <div>
-                <a href="#historia" class="btn-primary">História</a>
-            </div>
-            <div>
-                <a href="#contactos" class="btn-primary">Contactos</a>
-            </div>
-            <div>
-                <a href="#eventos" class="btn-primary">Eventos</a>
-            </div>
-    </nav>
     <main class="parallax-wrapper">
         <header class="main-header">
             <div class="roadmap">
                 <a href="">
                     <div class="destination">
                         <span>Lagos</span>
-                        <span>(anterior)</span>
+                        <!-- <span>(anterior)</span> -->
                     </div>
                 </a>
                 <div class="destination connection"></div>
                 <a href="">
                     <div class="destination current">
                         <span>Portimão</span>
-                        <span>(actual)</span>
+                        <!-- <span>(actual)</span> -->
                     </div>
                 </a>
                 </a><div class="destination connection"></div>
                 <a href="">
                     <div class="destination">
                         <span>Faro</span>
-                        <span>(proximo)</span>
+                        <!-- <span>(proximo)</span> -->
                     </div>
                 </a>
             </div>
             <div class="top-stripe"></div>
-            <!-- <h2 class="website-title"> -->
-                <img src="./assets/img/logo.png" class="logo-landing-page" alt="">
-            <!-- </h2> -->
+            <nav class="main-nav" role="navigation">
+                <div class="nav-toggle">
+                    <span class="nav-close-icon">X</span>
+                </div>
+                <div class="logo-container-outer">
+                    <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
+                </div>
+                <div>
+                    <a href="#home" class="btn-primary">Home</a>
+                </div>
+                <div>
+                    <a href="#conceito" class="btn-primary">Conceito</a>
+                </div>
+                <div>
+                    <a href="#produtos" class="btn-primary">Produtos</a>
+                </div>
+                <div>
+                    <a href="#bomaoquadrado" class="btn-primary">#bomaoquadrado</a>
+                </div>
+                <div>
+                    <a href="#historia" class="btn-primary">História</a>
+                </div>
+                <div>
+                    <a href="#contactos" class="btn-primary">Contactos</a>
+                </div>
+                <div>
+                    <a href="#eventos" class="btn-primary">Eventos</a>
+                </div>
+            </nav>
+            <img src="./assets/img/logo.png" class="logo-landing-page" alt="">
             <div class="nav-toggle">
                 <div></div>
                 <div></div>
