organized css for btn-nav

--- a/src/index.html
+++ b/src/index.html
@@ -33,36 +33,36 @@
             </div>
             <div class="top-stripe"></div>
             <nav class="main-nav" role="navigation">
-                <div class="nav-toggle">
+                <div class="btn nav-toggle">
                     <span class="nav-close-icon">X</span>
                 </div>
                 <div class="logo-container-outer">
                     <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
                 </div>
                 <div>
-                    <a href="#home" class="btn-primary">Home</a>
+                    <a href="#home" class="btn btn-nav">Home</a>
                 </div>
                 <div>
-                    <a href="#conceito" class="btn-primary">Conceito</a>
+                    <a href="#conceito" class="btn btn-nav">Conceito</a>
                 </div>
                 <div>
-                    <a href="#produtos" class="btn-primary">Produtos</a>
+                    <a href="#produtos" class="btn btn-nav">Produtos</a>
                 </div>
                 <div>
-                    <a href="#bomaoquadrado" class="btn-primary">#bomaoquadrado</a>
+                    <a href="#bomaoquadrado" class="btn btn-nav">#bomaoquadrado</a>
                 </div>
                 <div>
-                    <a href="#historia" class="btn-primary">História</a>
+                    <a href="#historia" class="btn btn-nav">História</a>
                 </div>
                 <div>
-                    <a href="#contactos" class="btn-primary">Contactos</a>
+                    <a href="#contactos" class="btn btn-nav">Contactos</a>
                 </div>
                 <div>
-                    <a href="#eventos" class="btn-primary">Eventos</a>
+                    <a href="#eventos" class="btn btn-nav">Eventos</a>
                 </div>
             </nav>
             <img src="./assets/img/logo.png" class="logo-landing-page" alt="">
-            <div class="nav-toggle">
+            <div class="btn nav-toggle">
                 <div></div>
                 <div></div>
                 <div></div>
