Added a new font and stylized the page

--- a/src/index.html
+++ b/src/index.html
@@ -69,15 +69,57 @@
             </div>
         </header>
         <section class="section parallax bg1">
+            <div>
+                <h1>Creparia Artesanal</h1>
+                <h4>Quem prova quer mais!</h4>
+            </div>
         </section>
         <section class="section static">
-            <h1>Test text</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-            </p>
+            <h1>Conceito</h1>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+                <div class="show-more">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                    </p>
+                </div>
+            </div>
         </section>
         <section class="section parallax bg2">
-            <h1>Test 2</h1>
+        </section>
+        <section class="section static">
+            <h1>Produtos</h1>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+            </div>
+        </section>
+        <section class="section parallax bg3">
+        </section>
+        <section class="section static">
+            <h1>Produtos</h1>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+            </div>
+        </section>
+        <section class="section parallax bg4">
         </section>
         <footer class="section static footer">
             <h1>Test text</h1>
