Edited html so it reflect a little the webpage layout

--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,10 @@
                     <a href="#produtos" class="btn btn-nav">Produtos</a>
                 </div>
                 <div>
-                    <a href="#bomaoquadrado" class="btn btn-nav">#bomaoquadrado</a>
+                    <a href="#historia" class="btn btn-nav">História</a>
                 </div>
                 <div>
-                    <a href="#historia" class="btn btn-nav">História</a>
+                    <a href="#bomaoquadrado" class="btn btn-nav">#bomaoquadrado</a>
                 </div>
                 <div>
                     <a href="#contactos" class="btn btn-nav">Contactos</a>
@@ -74,6 +74,7 @@
                 <h4>Quem prova quer mais!</h4>
             </div>
         </section>
+        <!-- Conceito -->
         <section class="section static">
             <h1>Conceito</h1>
             <div>
@@ -95,6 +96,7 @@
         </section>
         <section class="section parallax bg2">
         </section>
+        <!-- Produtos -->
         <section class="section static">
             <h1>Produtos</h1>
             <div>
@@ -108,6 +110,7 @@
         </section>
         <section class="section parallax bg3">
         </section>
+        <!-- História -->
         <section class="section static">
             <h1>Produtos</h1>
             <div>
@@ -121,8 +124,46 @@
         </section>
         <section class="section parallax bg4">
         </section>
+        <!-- #bomaoquadrado -->
+        <section class="section static">
+                <h1>bomaoquadrado</h1>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                    </p>
+                </div>
+        </section>
+        <section class="section parallax bg4">
+        </section>
+        <!-- Contactos -->
+        <section class="section static">
+            <h1>Contactos</h1>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+            </div>
+        </section>
+        <!-- Eventos -->
+        <section class="section static">
+            <h1>Eventos</h1>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                </p>
+            </div>
+        </section>
         <footer class="section static footer">
-            <h1>Test text</h1>
+            <h1>Rodape</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
             </p>
