Fixed new card styles

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             </div>
         </section>
         <!-- Conceito -->
-        <section class="section static">
+        <section class="section static card-background-light">
             <h1>Conceito</h1>
             <div>
                 <p>
@@ -97,7 +97,7 @@
         <section class="section parallax bg2">
         </section>
         <!-- Produtos -->
-        <section class="section static">
+        <section class="section static card-background-dark">
             <h1>Produtos</h1>
             <div>
                 <p>
@@ -111,8 +111,8 @@
         <section class="section parallax bg3">
         </section>
         <!-- História -->
-        <section class="section static">
-            <h1>Produtos</h1>
+        <section class="section static card-background-light">
+            <h1>História</h1>
             <div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
@@ -125,8 +125,8 @@
         <section class="section parallax bg4">
         </section>
         <!-- #bomaoquadrado -->
-        <section class="section static">
-                <h1>bomaoquadrado</h1>
+        <section class="section static card-background-dark">
+                <h1>#bomaoquadrado</h1>
                 <div>
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
@@ -139,7 +139,7 @@
         <section class="section parallax bg4">
         </section>
         <!-- Contactos -->
-        <section class="section static">
+        <section class="section static card-background-light">
             <h1>Contactos</h1>
             <div>
                 <p>
@@ -151,7 +151,7 @@
             </div>
         </section>
         <!-- Eventos -->
-        <section class="section static">
+        <section class="section static card-background-dark">
             <h1>Eventos</h1>
             <div>
                 <p>
