Changed the look of the navigation on mobile format. Changed also the font of the cards

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
                 </a>
             </div>
             <div class="top-stripe"></div>
-            <nav class="main-nav" role="navigation">
+            <nav class="main-nav card-background-dark" role="navigation">
                 <div class="btn nav-toggle">
-                    <span class="nav-close-icon">X</span>
+                    <span class="nav-close-icon"><i class="right"></i></span>
                 </div>
                 <div class="logo-container-outer">
                     <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
@@ -71,7 +71,7 @@
         <section class="section parallax bg1">
             <div>
                 <h1>Creparia Artesanal</h1>
-                <h4>Quem prova quer mais!</h4>
+                <h3>Quem prova quer mais!</h3>
             </div>
         </section>
         <!-- Conceito -->
