--- a/src/index.html
+++ b/src/index.html
@@ -99,13 +99,127 @@
         <!-- Produtos -->
         <section class="section static card-background-dark">
             <h1>Produtos</h1>
-            <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
+            <div class="flip-card-grid">
+                    <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                                    <div class="inner">
+                                        <p>Diligord</p>
+                                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="url(https://unsplash.it/511/511/)">
+                                    <div class="inner">
+                                        <p>Rocogged</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+                                    <div class="inner">
+                                        <p>Strizzes</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+                                    <div class="inner">
+                                        <p>Clossyo</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/504/504/">
+                                    <div class="inner">
+                                        <p>Rendann</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/505/505/)">
+                                    <div class="inner">
+                                        <p>Reflupper</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
+                                    <div class="inner">
+                                        <p>Acirassi</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" ontouchstart="this.classList.toggle('hover');">
+                            <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/508/508/)">
+                                    <div class="inner">
+                                        <p>Sohanidd</p>
+                        <span>Lorem ipsum</span>
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div class="inner">
+                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
             </div>
         </section>
         <section class="section parallax bg3">
