Cards now show properly, need only media queries to show properly on other resolutions

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                 <div></div>
             </div>
         </header>
-        <section class="section parallax bg1">
+        <section class="section parallax bg1 justify-content-center">
             <div>
                 <h1>Creparia Artesanal</h1>
                 <h3>Quem prova quer mais!</h3>
@@ -97,7 +97,7 @@
         <section class="section parallax bg2">
         </section>
         <!-- Produtos -->
-        <section class="section static card-background-dark">
+        <section class="section static card-background-dark ">
             <h1>Produtos</h1>
             <div class="flip-card-grid">
                     <div class="col" ontouchstart="this.classList.toggle('hover');">
@@ -117,7 +117,7 @@
                         </div>
                         <div class="col" ontouchstart="this.classList.toggle('hover');">
                             <div class="container">
-                                <div class="front" style="url(https://unsplash.it/511/511/)">
+                                <div class="front" style="background-image:url(https://unsplash.it/511/511/)">
                                     <div class="inner">
                                         <p>Rocogged</p>
                         <span>Lorem ipsum</span>
@@ -162,7 +162,7 @@
                         </div>
                         <div class="col" ontouchstart="this.classList.toggle('hover');">
                             <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/504/504/">
+                                <div class="front" style="background-image: url(https://unsplash.it/504/504/)">
                                     <div class="inner">
                                         <p>Rendann</p>
                         <span>Lorem ipsum</span>
