Minor changes to html, css(organized comments) and removed webpack source

--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,8 @@
         </section>
         <!-- #bomaoquadrado -->
         <section class="section static card-background-dark">
-                <h1>#bomaoquadrado</h1>
+                <h1>#bom2</h1>
+                <h5>#bomaoquadrado</h5>
                 <div>
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
