changed some css proprties of the scroll to top butotn

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <div class="top-stripe"></div>
             <nav class="main-nav card-background-dark" role="navigation">
                 <div class="btn nav-toggle">
-                    <span class="nav-close-icon"><i class="right"></i></span>
+                    <span class="nav-close-icon"><i class="arrow-right"></i></span>
                 </div>
                 <div class="logo-container-outer">
                     <img src="./assets/img/logo.png" class="nav-mobile-logo" alt="">
@@ -224,6 +224,9 @@
             </p>
         </footer>
     </main>
-    <button id="scroll-to-top" title="Go to top">Voltar ao topo</button>
+    <button id="scroll-to-top" title="Go to top">
+        <i class="arrow-up"></i>
+        <i class="arrow-up"></i>
+</button>
 </body>
 </html>
