Added scroll smooth effect. All working ok

--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,7 @@
             </p>
         </footer>
     </main>
-    <button id="scroll-to-top" title="Go to top">
+    <button id="scroll-to-top" title="Ir para o topo">
         <i class="arrow-up"></i>
         <i class="arrow-up"></i>
 </button>
