--- a/src/index.html
+++ b/src/index.html
@@ -194,15 +194,25 @@
         <section class="section parallax bg4">
         </section>
         <!-- Contactos -->
-        <section class="section static card-background-light">
+        <section class="section static card-background-light" id="form">
             <h1>Contactos</h1>
             <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
+               <form class="contact-form">                   
+                    <label for="form-name">Nome</label>
+                    <input name="form-name" type="text" class="form-input">
+                    <label for="form-email">E-mail</label>
+                    <input name="form-email" type="text "class="form-input">
+                    <label for="">Motivo de contacto</label>
+                    <select name="form-select" id="form-select" class="form-input">
+                        <option selected disabled>Escolha o motivo</option>
+                        <option>Informação</option>
+                        <option>Feedback</option>
+                        <option>Eventos</option>
+                    </select>
+                    <label for="">Mensagem</label>
+                    <textarea name="form-message" id="form-message" class="form-input" cols="30" rows="10"></textarea>
+                    <button type="button" id="form-send" class="btn btn-send">Enviar</button>
+               </form>
             </div>
         </section>
         <!-- Eventos -->
