--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,7 @@
         <section class="section static card-background-dark ">
             <h1>Produtos</h1>
             <div class="flip-card-grid">
+                <!-- Waffle no palito -->
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
                         <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
@@ -109,12 +110,24 @@
                             </div>
                         </div>
                         <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                            <div class="inner back-inner-padding product-grid">
+                                <div>Nutella</div>
+                                <div>Chocolate de Leite</div>
+                                <div>Banana e Nutela</div>
+                                <div>Morangos e Nutella</div>
+                                <div>Kinder Chocolate</div>
+                                <div>Twix</div>
+                                <div>Doce de Ovos</div>
+                                <div>Doce de Morango</div>
+                                <div>Mel e Canela</div>
+                                <div>Açucar e canela</div>
+                                <div>Maçã e canela</div>
+                                <div>Extra</div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Crepes tradicionais -->
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
                         <div class="front" style="background-image:url(https://unsplash.it/511/511/)">
@@ -124,12 +137,26 @@
                             </div>
                         </div>
                         <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                            <div class="inner back-inner-padding product-grid">
+                                <div>Nutella</div>
+                                <div>Chocolate de Leite</div>
+                                <div>Banana e Nutela</div>
+                                <div>Morangos e Nutella</div>
+                                <div>Kinder Bueno</div>
+                                <div>Kinder Chocolate</div>
+                                <div>Oreo</div>
+                                <div>Twix</div>
+                                <div>Doce de Ovos</div>
+                                <div>Doce de Morango</div>
+                                <div>Mel e Canela</div>
+                                <div>Açucar e canela</div>
+                                <div>Maçã e canela</div>
+                                <div>Extra</div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Mini panquecas -->
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
                         <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
@@ -139,12 +166,26 @@
                             </div>
                         </div>
                         <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                            <div class="inner back-inner-padding product-grid">
+                                <div>Nutella</div>
+                                <div>Chocolate de Leite</div>
+                                <div>Banana e Nutela</div>
+                                <div>Morangos e Nutella</div>
+                                <div>Kinder Bueno</div>
+                                <div>Kinder Chocolate</div>
+                                <div>Oreo</div>
+                                <div>Twix</div>
+                                <div>Doce de Ovos</div>
+                                <div>Doce de Morango</div>
+                                <div>Mel e Canela</div>
+                                <div>Açucar e canela</div>
+                                <div>Maçã e canela</div>
+                                <div>Extra</div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Churritos -->
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
                         <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
@@ -154,8 +195,44 @@
                             </div>
                         </div>
                         <div class="back">
+                            <div class="inner back-inner-padding product-grid">
+                                <div>Nutella</div>
+                                <div>Chocolate de Leite</div>
+                                <div>Mel e Canela</div>
+                                <div>Açucar e canela</div>
+                                <div>Doce de Ovos</div>
+                                <div>Doce de Morango</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Bebidas -->
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container">
+                        <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <p>Bebidas</p>
+                                <!-- <span>Lorem ipsum</span> -->
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner back-inner-padding product-grid">
+                                <div>Coca-cola</div>
+                                <div>Coca-cola Zero</div>
+                                <div>Ice-tea pêssego</div>
+                                <div>Ice-tea manga</div>
+                                <div>Ice-tea limão</div>
+                                <div>Sumol laranja</div>
+                                <div>Sumol ananás</div>
+                                <div>Cerveja mini</div>
+                                <div>Água sem gás</div>
+                                <div>Água com gás</div>
+                                <div>Café</div>
+                                <div>Cappucino</div>
+                                <div>Latte Macciato</div>
+                                <div>Chocolate Quente</div>
+                                <div>Chá</div>
+                                <div>Ginjinha</div>
                             </div>
                         </div>
                     </div>
@@ -193,30 +270,8 @@
         </section>
         <section class="section parallax bg4">
         </section>
-        <!-- Contactos -->
-        <section class="section static card-background-light" id="form">
-            <h1>Contactos</h1>
-            <div>
-               <form class="contact-form">                   
-                    <label for="form-name">Nome</label>
-                    <input name="form-name" type="text" class="form-input">
-                    <label for="form-email">E-mail</label>
-                    <input name="form-email" type="text "class="form-input">
-                    <label for="">Motivo de contacto</label>
-                    <select name="form-select" id="form-select" class="form-input">
-                        <option selected disabled>Escolha o motivo</option>
-                        <option>Informação</option>
-                        <option>Feedback</option>
-                        <option>Eventos</option>
-                    </select>
-                    <label for="">Mensagem</label>
-                    <textarea name="form-message" id="form-message" class="form-input" cols="30" rows="10"></textarea>
-                    <button type="button" id="form-send" class="btn btn-send">Enviar</button>
-               </form>
-            </div>
-        </section>
         <!-- Eventos -->
-        <section class="section static card-background-dark">
+        <section class="section static card-background-light">
             <h1>Eventos</h1>
             <div>
                 <p>
@@ -226,6 +281,32 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
                 </p>
             </div>
+        </section>
+        <section class="section parallax bg4">
+        </section>
+        <!-- Contactos -->
+        <section class="section static card-background-dark" id="form">
+                <h1>Contactos</h1>
+                <div>
+                    <form class="contact-form">                   
+                        <label for="form-name">Nome</label>
+                        <input name="form-name" type="text" class="form-input">
+                        <label for="form-email">E-mail</label>
+                        <input name="form-email" type="text "class="form-input">
+                        <label for="">Motivo de contacto</label>
+                        <select name="form-select" id="form-select" class="form-input">
+                            <option selected disabled>Escolha o motivo</option>
+                            <option>Informação</option>
+                            <option>Feedback</option>
+                            <option>Eventos</option>
+                        </select>
+                        <label for="">Mensagem</label>
+                        <textarea name="form-message" id="form-message" class="form-input" cols="30" rows="10"></textarea>
+                        <button type="button" id="form-send" class="btn btn-send">Enviar</button>
+                    </form>
+                </div>
+        </section>
+        <section class="section parallax bg4">
         </section>
         <footer class="section static footer">
             <h1>Rodape</h1>
