--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <div class="hand-written-text">
+        <h1>Creparia Artesanal</h1>
+        <h3>Quem prova quer mais!</h3>
+    </div>
+    <div class="logo-landing-page">
+    </div>   
+    <div class="information">
+        <h1>A nossa página abre brevemente</h1>
+    </div> 
 </body>
 </html>
