Fully done the work in progress page, will implement mailchimp with gdpr

--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"><!-- 
+    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"> -->
     <title>Document</title>
 </head>
 <body>
-    <div class="hand-written-text">
-        <h1>Creparia Artesanal</h1>
-        <h3>Quem prova quer mais!</h3>
+    <div class="grid-wrapper">
+        <div class="top-text">
+            <!-- <h1>Creparia Artesanal</h1> -->
+            <h2>A nossa página abrirá brevemente :) </h2>
+        </div>
+        <!-- Begin Mailchimp Signup Form -->
+        <div id="mc_embed_signup">
+            <form action="https://bomaoquadrado.us19.list-manage.com/subscribe/post?u=9a022bfd92809d3c0845331e4&amp;id=060b2007e3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <label for="mce-EMAIL">Subscreva para as nossas novidades!</label>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_9a022bfd92809d3c0845331e4_060b2007e3" tabindex="-1" value="">
+                    </div>
+                    <input type="submit" value="Subscrever" name="subscribe" id="mc-embedded-subscribe" class="button">
+                </div>
+            </form>
+        </div>
+        <!--End mc_embed_signup-->
+        <div class="logo-landing-page"></div>  
+        <div class="bottom-text">
+            <p>Quem prova quer mais!</p>
+        </div> 
     </div>
-    <div class="logo-landing-page">
-    </div>   
-    <div class="information">
-        <h1>A nossa página abre brevemente</h1>
-    </div> 
 </body>
 </html>
