--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -13,7 +13,7 @@
             <!-- <h1>Creparia Artesanal</h1> -->
             <h2>A nossa página abrirá brevemente :) </h2>
         </div>
-        <!-- Begin Mailchimp Signup Form -->
+        <!--  Mailchimp Signup Form -->
         <div id="mc_embed_signup">
             <form action="https://bomaoquadrado.us19.list-manage.com/subscribe/post?u=9a022bfd92809d3c0845331e4&amp;id=060b2007e3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
@@ -27,7 +27,7 @@
                 </div>
             </form>
         </div>
-        <!--End mc_embed_signup-->
+        <!-- mc_embed_signup-->
         <div class="logo-landing-page"></div>  
         <div class="bottom-text">
             <p>Quem prova quer mais!</p>
