added button and links to social media

--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -12,7 +12,15 @@
     <div class="grid-wrapper">
         <div class="top-text">
             <!-- <h1>Creparia Artesanal</h1> -->
-            <h2>A nossa página abrirá brevemente!</h2>
+            <h2>Página em desenvolvimento</h2>
+        </div>
+        <div class="social-media">
+            <a href="https://www.facebook.com/bomaoquadrado/" target="_blank">
+                <div class="fb-logo"></div>
+            </a>
+            <a href="https://www.instagram.com/bomaoquadrado/" target="_blank">
+                <div class="ig-logo"></div>
+            </a>
         </div>
         <!-- Begin Mailchimp Signup Form -->
         <div id="mc_embed_signup">
