--- a/src/abrimos-breve.html
+++ b/src/abrimos-breve.html
@@ -31,14 +31,14 @@
                     <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
                         <div class="content__gdpr">
                             <div class="tooltip">Clique aqui e tome conhecimento dos termos:
-                                <span class="tooltiptext">
+                                <div class="tooltiptext">
                                     <p>
                                         Poderá cancelar a sua subscrição a qualquer altura ao clicar no endereço que está localizado no rodapé dos nossos e-mail. Para mais informações sobre as nossas práticas de privacidade, visite o nosso website ou entre em contato connosco em caso de dúvida.
                                     </p>
                                     <p>
                                         Nós utilizamos o serviço Mailchimp como plataforma de marketing. Ao subscrever, está a aceitar que a sua informação seja transferida e processada pela empresa Mailchimp. Se está interessado acerca da práticas de privacidade da Mailchimp, visite https://mailchimp.com/legal/.
                                     </p>
-                                </span>
+                                </div>
                             </div>
                             <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
                                 <label class="checkbox subfield" for="gdpr_18593" style="display: grid; grid-template-columns: min-content 1fr;align-items: center;margin-top: 5px;">
