Added opacity effect to the scroll to top arrow

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,14 @@
                         <span>27-10-2018</span>
                     </div>
                 </a>
-                </a><div class="destination connection"></div>
+                <div class="destination connection"></div>
                 <a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">
                     <div class="destination">
                         <span>Albufeira</span>
                         <span>27-10-2018</span>
                     </div>
                 </a>
+                <a id="show-locator" href="#" class="btn">Clique aqui para nos encontrar</a>
             </div>
             <div class="top-stripe"></div>
             <nav class="main-nav card-background-dark" role="navigation">
