Roadmap is fully complete and implemented

--- a/src/index.html
+++ b/src/index.html
@@ -10,27 +10,43 @@
     <main class="parallax-wrapper">
         <header class="main-header">
             <div class="roadmap">
-                <a href="https://www.google.com/maps/dir/?api=1&destination=37.104594,-8.674612" target="_blank">
-                    <div class="destination">
-                        <span>Praia dos Três Irmãos</span>
-                        <span>27-10-2018</span>
-                    </div>
-                </a>
-                <div class="destination connection"></div>
-                <a href="https://www.google.com/maps/dir/?api=1&destination=37.133377,-8.535102" target="_blank">
-                    <div class="destination current">
-                        <span>Portimão</span>
-                        <span>27-10-2018</span>
-                    </div>
-                </a>
-                <div class="destination connection"></div>
-                <a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">
-                    <div class="destination">
-                        <span>Albufeira</span>
-                        <span>27-10-2018</span>
-                    </div>
-                </a>
-                <a id="show-locator" href="#" class="btn">Clique aqui para nos encontrar</a>
+                <div class="road-map-locator">
+                    <a href="https://www.google.com/maps/dir/?api=1&destination=37.104594,-8.674612" target="_blank">
+                        <div class="destination card-background-dark">
+                            <span>Praia dos Três Irmãos</span>
+                            <span>27-10-2018</span>
+                        </div>
+                    </a>
+                    <div class="destination connection"></div>
+                    <a href="https://www.google.com/maps/dir/?api=1&destination=37.133377,-8.535102" target="_blank">
+                        <div class="destination current card-background-light">
+                            <span>Portimão</span>
+                            <span>27-10-2018</span>
+                        </div>
+                    </a>
+                    <div class="destination connection"></div>
+                    <a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">
+                        <div class="destination card-background-dark">
+                            <span>Albufeira</span>
+                            <span>27-10-2018</span>
+                        </div>
+                    </a>
+                    <div class="destination connection"></div>
+                    <a href="https://www.google.com/maps/dir/?api=1&destination=37.103319,-8.672234" target="_blank">
+                        <div class="destination card-background-dark">
+                            <span>Lagos</span>
+                            <span>27-10-2018</span>
+                        </div>
+                    </a>
+                    <div class="destination connection"></div>
+                    <a href="https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425" target="_blank">
+                        <div class="destination card-background-dark">
+                            <span>Aljezur</span>
+                            <span>27-10-2018</span>
+                        </div>
+                    </a>
+                </div>
+                <a id="show-locator" href="#" class="btn" style="align-self: end;">Clique aqui para nos encontrar</a>
             </div>
             <div class="top-stripe"></div>
             <nav class="main-nav card-background-dark" role="navigation">
