Page now scroll to products when pressed on

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </a>
                 </div>
-                <a id="show-locator" href="#" class="btn" style="align-self: end;">Clique aqui para nos encontrar</a>
+                <a id="show-locator" href="#" class="btn" style="align-self: end;">À nossa procura ?</a>
             </div>
             <div class="top-stripe"></div>
             <nav class="main-nav card-background-dark" role="navigation">
@@ -89,6 +89,7 @@
             <div>
                 <h1>Creparia Artesanal</h1>
                 <h3>Quem prova quer mais!</h3>
+                <p>Clique <u id="scroll-to-products">aqui</u> para ver os nossos produtos</p>
             </div>
         </section>
         <!-- Conceito -->
@@ -114,7 +115,7 @@
         <section class="section parallax bg2">
         </section>
         <!-- Produtos -->
-        <section class="section static card-background-dark ">
+        <section class="section static card-background-dark" id="products">
             <h1>Produtos</h1>
             <div class="flip-card-grid">
                 <!-- Waffle no palito -->
